# paper

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  README.md.jinja  copier.yml  pyproject.toml  ruff.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  renovate.json  template.yml
.github/actions/tag/: action.yml
.github/resources/: data.yaml
.github/scripts/: make_header.sh
.github/workflows/: act.yml  book.yml  ci.yml  latex-build.yml  latex.yml  pre-commit.yml  release.yml  sync.yml
book/: _config.yml
book/docs/: api.md  marimo.md  reports.md
book/marimo/: demo.py
paper/: document.tex  header.tex
src/paper/: add.py
src/tests/: conftest.py  test_trivial.py
template/: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.jinja  README.md.jinja
template/.github/: renovate.json  {% if use_renovate %}renovate.json{% endif %}.jinja
template/.github/actions/latex/: action.yml
template/.github/workflows/: latex.yml  latex.yml.jinja  pre-commit.yml  release.yml
template/actions/latex/: action.yml
template/paper/: document.tex
templates/: index.html
tests/: test_repo.py
