[project]
name = 'paper'
version = "0.0.0"
description = "Cradle template for LaTeX documents"
authors = [{name='tschm', email= ''}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
repository = ""

[dependency-groups]
dev = []

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper"]
